--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.84.0",
     "clsx": "^2.1.1",
+    "jspdf": "^3.0.4",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.554.0",
     "next": "16.0.3",
     "react": "19.2.0",
